results/experiments/11_90_incorrect/1514/2026-04-29_10-00-59/selection/batfish/candidate_1_vs_candidate_3_reachability.txt
--- Analyzing results/experiments/2026-04-29_06-59-06/1514/2026-04-29_10-00-59/candidates: candidate_1 vs candidate_3 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=barcelona [10.0.0.68->100.0.5.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet1/0 with resolved next-hop IP: 10.0.0.71, Routes: [ospfE2 (Network: 100.0.5.0/24, Next Hop: interface FastEthernet1/0 ip 10.0.0.71)]), TRANSMITTED(FastEthernet1/0)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet1/1 with resolved next-hop IP: 10.0.0.77, Routes: [ospfE2 (Network: 100.0.5.0/24, Next Hop: interface FastEthernet1/1 ip 10.0.0.77)]), TRANSMITTED(FastEthernet1/1)), (RECEIVED(FastEthernet [...]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]
